# mpu6050-ros

./: CMakeLists.txt  README.md  package.xml
firmware/: CMakeLists.txt  mpu6050_ros.cpp
launch/: mpu6050.launch
