<?xml version="1.0"?>
<package>
  <name>mpu6050_ros</name>
  <version>0.0.0</version>
  <description>The mpu6050-ros package</description>
  <maintainer email="eirstr@stud.ntnu.no">Eirik Strand</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
